k8s/mysqldb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysqldb-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: mysqldb
  template:
    metadata:
      labels:
        component: mysqldb
    spec:
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: database-persistent-volume-claim
      containers:
        - name: mysql
          image: mysql
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-storage
              mountPath: /var/lib/mysql
              subPath: mysql
