k8s/mysqldb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysqldb-service
spec:
  type: ClusterIP
  selector:
    component: mysqldb
  ports:
    - port: 3306
      targetPort: 3306
